--- a/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
@@ -201,12 +201,10 @@
       fixtures:
       - shape:
           !type:PhysShapeCircle
-          radius: 0.5
-        density: 0
+        radius: 0.2
+        density: 100
         mask:
-          - MachineMask
-        layer:
-          - MachineLayer
+        - TableMask
     - type: Damageable
       damageContainer: Inorganic
       damageModifierSet: Metallic
