--- a/Resources/Prototypes/Theta/Shipevent/shipevent.yml
+++ b/Resources/Prototypes/Theta/Shipevent/shipevent.yml
@@ -15,6 +15,9 @@
     respawnDelay: 60
     bonusInterval: 600
     
+    #teams
+    playersPerTeamPlace: 2
+    
     #points
     pointsPerInterval: 5000
     pointsPerHitMultiplier: 0.01
