--- a/Resources/Prototypes/MobHUDs/shipevent_hud.yml
+++ b/Resources/Prototypes/MobHUDs/shipevent_hud.yml
@@ -1,5 +1,13 @@
 ﻿- type: mobhud
   id: ShipeventHUD
-  sprite: {sprite: /Textures/Theta/ShipEvent/ShipHUDIcon.rsi, state: icon}
+  sprite: {sprite: /Textures/Theta/ShipEvent/ShipHUDIcon.rsi, state: member}
   allowedHUDs:
     - ShipeventHUD
+    - ShipeventHUDCaptain
+  
+- type: mobhud
+  id: ShipeventHUDCaptain
+  sprite: {sprite: /Textures/Theta/ShipEvent/ShipHUDIcon.rsi, state: captain}
+  allowedHUDs:
+    - ShipeventHUD
+    - ShipeventHUDCaptain
