--- a/Resources/Prototypes/Theta/Shipevent/shipevent.yml
+++ b/Resources/Prototypes/Theta/Shipevent/shipevent.yml
@@ -8,6 +8,7 @@
     endAfter: 1
     
     hudPrototypeId: "ShipeventHUD"
+    captainHudPrototypeId: "ShipeventHUDCaptain"
     
     #time
     roundDuration: 1800
