--- a/Resources/Prototypes/Theta/Shipevent/ships.yml
+++ b/Resources/Prototypes/Theta/Shipevent/ships.yml
@@ -4,3 +4,10 @@
     mapPath: "/Maps/Shuttles/shiptest-infiltrator.yml"
   spawnWeight: 0
   minDistance: 10
+  
+- type: shiptype
+  id: shiptype_infiltator
+  name: "Infiltator"
+  description: "infiltator.yml but with cannons"
+  previewImage: /Textures/Theta/ShipEvent/ShipPreviews/infiltrator-preview.png
+  structurePrototype: "shiptest_infiltrator"
