--- a/Resources/Prototypes/Entities/Theta/ShipEvent/human.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/human.yml
@@ -15,6 +15,8 @@
       interfaces:
       - key: enum.TeamViewUiKey.Key
         type: TeamViewBoundUserInterface
+      - key: enum.CaptainMenuUiKey.Key
+        type: CaptainMenuBoundUserInterface
     - type: MobHUD
 
 - type: entity
