Селектор корабликов + ещё немного фиксов (#151)
Co-authored-by: KIBORG04 <bossmira4@gmail.com>

--- a/Resources/Prototypes/Entities/Theta/ShipEvent/human.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/human.yml
@@ -10,19 +10,13 @@
       prototypes: [ShipTestEventStandard]
     - type: UsePlayerNameForEntityName
     - type: ShipEventFactionMarker
-    - type: ShipEventFactionView
-      toggle:
-        icon: { sprite: "/Textures/Theta/ShipEvent/ShipTeamView.rsi", state: icon }
-        iconOn: "/Textures/Theta/ShipEvent/ShipTeamView.rsi"
-        name: shipevent-teamview-toggle-name
-        description: shipevent-teamview-toggle-desc
-        itemIconStyle: NoItem
-        event: !type:ToggleActionEvent
     - type: RadarHUD
     - type: UserInterface
       interfaces:
       - key: enum.TeamViewUiKey.Key
         type: TeamViewBoundUserInterface
+      - key: enum.CaptainMenuUiKey.Key
+        type: CaptainMenuBoundUserInterface
     - type: MobHUD
 
 - type: entity
