--- a/Resources/Prototypes/Maps/shipevent-lobby.yml
+++ b/Resources/Prototypes/Maps/shipevent-lobby.yml
@@ -5,6 +5,7 @@
   minPlayers: 1
   stations:
     LobbyShipevent:
+      stationProto: NanotrasenCentralCommand
       mapNameTemplate: 'Lobby'
       overflowJobs:
         - PassengerGodmode
