--- a/Resources/Prototypes/Maps/shipevent-lobby.yml
+++ b/Resources/Prototypes/Maps/shipevent-lobby.yml
@@ -6,8 +6,11 @@
   stations:
     LobbyShipevent:
       stationProto: NanotrasenCentralCommand
-      mapNameTemplate: 'Lobby'
-      overflowJobs:
-        - PassengerGodmode
-      availableJobs:
-        PassengerGodmode: [ -1, -1 ]
+      components:
+        - type: StationNameSetup
+          mapNameTemplate: 'Lobby'
+        - type: StationJobs
+          overflowJobs:
+            - PassengerGodmode
+          availableJobs:
+            PassengerGodmode: [ -1, -1 ]
