another fix of test

--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/rocket.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/rocket.yml
@@ -49,6 +49,7 @@
 - type: entity
   id: LightBulletRocket
   parent: BulletRocket
+  noSpawn: true
   components:
     - type: Explosive
       explosionType: Default
