--- a/Resources/Prototypes/DeviceLinking/sink_ports.yml
+++ b/Resources/Prototypes/DeviceLinking/sink_ports.yml
@@ -97,3 +97,8 @@
   id: B2
   name: "Input B2"
   description: "Input B2"
+  
+- type: sinkPort
+  id: CannonConsoleReceiver
+  name: "-"
+  description: "-"
