--- a/Resources/Prototypes/DeviceLinking/source_ports.yml
+++ b/Resources/Prototypes/DeviceLinking/source_ports.yml
@@ -82,3 +82,13 @@
   id: O2
   name: "Output 2"
   description: "Output 2"
+  
+- type: sourcePort
+  id: CannonConsoleSender
+  name: shipevent-cannonconsole-signalport-name
+  description: shipevent-cannonconsole-signalport-desc
+
+- type: sourcePort
+  id: TurretLoaderSender
+  name: shipevent-turretloader-signalport-name
+  description: shipevent-turretloader-signalport-desc
