--- a/Resources/Prototypes/DeviceLinking/sink_ports.yml
+++ b/Resources/Prototypes/DeviceLinking/sink_ports.yml
@@ -100,5 +100,5 @@
   
 - type: sinkPort
   id: CannonConsoleReceiver
-  name: "-"
-  description: "-"
+  name: "Cannon console receiver"
+  description: "Cannon console receiver"
