--- a/Resources/Maps/Shuttles/shiptest-infiltrator.yml
+++ b/Resources/Maps/Shuttles/shiptest-infiltrator.yml
@@ -17,7 +17,7 @@ entities:
     components:
     - type: MetaData
     - pos: 0.64252126,4.1776605
-      parent: invalid
+      parent: 792
       type: Transform
     - chunks:
         -1,-1:
@@ -372,7 +372,16 @@ entities:
       shakeTimes: 10
       type: GravityShake
     - type: GasTileOverlay
-    - type: SpreaderGrid
+    - nextUpdate: 0
+      type: SpreaderGrid
+  - uid: 792
+    components:
+    - type: MetaData
+    - type: Transform
+    - type: Map
+    - type: PhysicsMap
+    - type: Broadphase
+    - type: OccluderTree
 - proto: AirlockExternal
   entities:
   - uid: 450
@@ -437,8 +446,6 @@ entities:
           restitution: 0
           friction: 0.4
       type: Fixtures
-    - canCollide: False
-      type: Physics
   - uid: 849
     components:
     - rot: 1.5707963267948966 rad
@@ -457,8 +464,6 @@ entities:
           restitution: 0
           friction: 0.4
       type: Fixtures
-    - canCollide: False
-      type: Physics
 - proto: AirlockSecurity
   entities:
   - uid: 33
@@ -4476,6 +4481,11 @@ entities:
       type: ApcPowerReceiver
 - proto: PoweredSmallLight
   entities:
+  - uid: 794
+    components:
+    - pos: 3.5,-2.5
+      parent: 1
+      type: Transform
   - uid: 939
     components:
     - pos: -4.5,-8.5
