--- a/Resources/Prototypes/DeviceLinking/source_ports.yml
+++ b/Resources/Prototypes/DeviceLinking/source_ports.yml
@@ -82,3 +82,13 @@
   id: O2
   name: "Output 2"
   description: "Output 2"
+  
+- type: sourcePort
+  id: CannonConsoleSender
+  name: "Cannon console"
+  description: "Cannon console"
+
+- type: sourcePort
+  id: TurretLoaderSender
+  name: "Turret loader"
+  description: "Turret loader"
