--- a/Resources/Maps/Theta/Shipevent/Ships/shipevent-arrowhead.yml
+++ b/Resources/Maps/Theta/Shipevent/Ships/shipevent-arrowhead.yml
@@ -577,18 +577,36 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 147
+  - uid: 143
     components:
-    - pos: -1.5,4.5
+    - pos: 12.5,5.5
       parent: 1
       type: Transform
     - enabled: True
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 148
+  - uid: 145
     components:
-    - pos: -2.5,4.5
+    - pos: 1.5,10.5
+      parent: 1
+      type: Transform
+    - enabled: True
+      type: AmbientSound
+    - fixtures: {}
+      type: Fixtures
+  - uid: 146
+    components:
+    - pos: 8.5,10.5
+      parent: 1
+      type: Transform
+    - enabled: True
+      type: AmbientSound
+    - fixtures: {}
+      type: Fixtures
+  - uid: 147
+    components:
+    - pos: -1.5,4.5
       parent: 1
       type: Transform
     - enabled: True
@@ -622,6 +640,15 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
+  - uid: 199
+    components:
+    - pos: 12.5,2.5
+      parent: 1
+      type: Transform
+    - enabled: True
+      type: AmbientSound
+    - fixtures: {}
+      type: Fixtures
   - uid: 202
     components:
     - pos: 1.5,2.5
@@ -634,6 +661,24 @@ entities:
   - uid: 203
     components:
     - pos: 0.5,2.5
+      parent: 1
+      type: Transform
+    - enabled: True
+      type: AmbientSound
+    - fixtures: {}
+      type: Fixtures
+  - uid: 205
+    components:
+    - pos: -2.5,2.5
+      parent: 1
+      type: Transform
+    - enabled: True
+      type: AmbientSound
+    - fixtures: {}
+      type: Fixtures
+  - uid: 209
+    components:
+    - pos: -2.5,5.5
       parent: 1
       type: Transform
     - enabled: True
@@ -757,15 +802,6 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 234
-    components:
-    - pos: 12.5,4.5
-      parent: 1
-      type: Transform
-    - enabled: True
-      type: AmbientSound
-    - fixtures: {}
-      type: Fixtures
   - uid: 235
     components:
     - pos: 11.5,5.5
@@ -847,6 +883,37 @@ entities:
       type: Transform
     - nextSound: 262.6462193
       type: EmitSoundOnCollide
+- proto: CannonComputerShipEvent
+  entities:
+  - uid: 251
+    components:
+    - pos: 4.5,9.5
+      parent: 1
+      type: Transform
+    - enabled: True
+      type: PointLight
+    - linkedPorts:
+        159:
+        - CannonConsoleSender: CannonConsoleReceiver
+        172:
+        - CannonConsoleSender: CannonConsoleReceiver
+        192:
+        - CannonConsoleSender: CannonConsoleReceiver
+        194:
+        - CannonConsoleSender: CannonConsoleReceiver
+        171:
+        - CannonConsoleSender: CannonConsoleReceiver
+        135:
+        - CannonConsoleSender: CannonConsoleReceiver
+      registeredSinks:
+        CannonConsoleSender:
+        - 159
+        - 172
+        - 192
+        - 194
+        - 171
+        - 135
+      type: DeviceLinkSource
 - proto: Catwalk
   entities:
   - uid: 177
@@ -1079,13 +1146,55 @@ entities:
       pos: 5.5,2.5
       parent: 1
       type: Transform
-    - nextFire: 167.409225
+    - nextFire: 0
       type: Thruster
 - proto: KitchenMicrowave
   entities:
   - uid: 166
     components:
     - pos: 2.5,7.5
+      parent: 1
+      type: Transform
+- proto: LightArtilleryAmmoClosetShipEvent
+  entities:
+  - uid: 198
+    components:
+    - pos: 0.5,4.5
+      parent: 1
+      type: Transform
+  - uid: 210
+    components:
+    - pos: 1.5,4.5
+      parent: 1
+      type: Transform
+  - uid: 211
+    components:
+    - pos: 1.5,3.5
+      parent: 1
+      type: Transform
+  - uid: 212
+    components:
+    - pos: 0.5,3.5
+      parent: 1
+      type: Transform
+  - uid: 213
+    components:
+    - pos: 9.5,4.5
+      parent: 1
+      type: Transform
+  - uid: 214
+    components:
+    - pos: 9.5,3.5
+      parent: 1
+      type: Transform
+  - uid: 243
+    components:
+    - pos: 8.5,4.5
+      parent: 1
+      type: Transform
+  - uid: 244
+    components:
+    - pos: 8.5,3.5
       parent: 1
       type: Transform
 - proto: MedkitCombatFilled
@@ -1110,10 +1219,9 @@ entities:
       type: EmitSoundOnCollide
 - proto: OperatingTable
   entities:
-  - uid: 161
+  - uid: 141
     components:
-    - rot: -1.5707963267948966 rad
-      pos: 7.5,7.5
+    - pos: 8.5,6.5
       parent: 1
       type: Transform
 - proto: OxygenCanister
@@ -1197,6 +1305,102 @@ entities:
       type: Transform
     - nextSound: 683.8635728
       type: EmitSoundOnCollide
+- proto: ShipEventLightArtilleryCannon
+  entities:
+  - uid: 135
+    components:
+    - flags: SessionSpecific
+      type: MetaData
+    - pos: 12.5,-0.5
+      parent: 1
+      type: Transform
+    - nextFire: 0
+      type: Gun
+    - links:
+      - 250
+      - 251
+      type: DeviceLinkSink
+    - container: ""
+      type: ContainerAmmoProvider
+  - uid: 159
+    components:
+    - flags: SessionSpecific
+      type: MetaData
+    - pos: -2.5,-0.5
+      parent: 1
+      type: Transform
+    - nextFire: 0
+      type: Gun
+    - links:
+      - 247
+      - 251
+      type: DeviceLinkSink
+    - container: ""
+      type: ContainerAmmoProvider
+  - uid: 171
+    components:
+    - flags: SessionSpecific
+      type: MetaData
+    - rot: 1.5707963267948966 rad
+      pos: 11.5,8.5
+      parent: 1
+      type: Transform
+    - nextFire: 0
+      type: Gun
+    - links:
+      - 249
+      - 251
+      type: DeviceLinkSink
+    - container: ""
+      type: ContainerAmmoProvider
+  - uid: 172
+    components:
+    - flags: SessionSpecific
+      type: MetaData
+    - rot: -1.5707963267948966 rad
+      pos: -1.5,8.5
+      parent: 1
+      type: Transform
+    - nextFire: 0
+      type: Gun
+    - links:
+      - 246
+      - 251
+      type: DeviceLinkSink
+    - container: ""
+      type: ContainerAmmoProvider
+  - uid: 192
+    components:
+    - flags: SessionSpecific
+      type: MetaData
+    - rot: 3.141592653589793 rad
+      pos: 2.5,12.5
+      parent: 1
+      type: Transform
+    - nextFire: 0
+      type: Gun
+    - links:
+      - 245
+      - 251
+      type: DeviceLinkSink
+    - container: ""
+      type: ContainerAmmoProvider
+  - uid: 194
+    components:
+    - flags: SessionSpecific
+      type: MetaData
+    - rot: 3.141592653589793 rad
+      pos: 7.5,12.5
+      parent: 1
+      type: Transform
+    - nextFire: 0
+      type: Gun
+    - links:
+      - 248
+      - 251
+      type: DeviceLinkSink
+    - container: ""
+      type: ContainerAmmoProvider
 - proto: ShuttleWindow
   entities:
   - uid: 28
@@ -1278,9 +1482,9 @@ entities:
       type: Transform
 - proto: TeamSpawnerShipEvent
   entities:
-  - uid: 132
+  - uid: 142
     components:
-    - pos: 8.5,6.5
+    - pos: 7.5,7.5
       parent: 1
       type: Transform
 - proto: Thruster
@@ -1291,7 +1495,7 @@ entities:
       pos: 2.5,-0.5
       parent: 1
       type: Transform
-    - nextFire: 378.773077
+    - nextFire: 0
       type: Thruster
   - uid: 37
     components:
@@ -1299,7 +1503,7 @@ entities:
       pos: 0.5,-0.5
       parent: 1
       type: Transform
-    - nextFire: 379.5490873
+    - nextFire: 0
       type: Thruster
   - uid: 38
     components:
@@ -1307,7 +1511,7 @@ entities:
       pos: 7.5,-0.5
       parent: 1
       type: Transform
-    - nextFire: 381.1120247
+    - nextFire: 0
       type: Thruster
   - uid: 39
     components:
@@ -1315,7 +1519,7 @@ entities:
       pos: 1.5,-0.5
       parent: 1
       type: Transform
-    - nextFire: 378.2660682
+    - nextFire: 0
       type: Thruster
   - uid: 57
     components:
@@ -1323,7 +1527,7 @@ entities:
       pos: 8.5,-0.5
       parent: 1
       type: Transform
-    - nextFire: 381.7040291
+    - nextFire: 0
       type: Thruster
   - uid: 58
     components:
@@ -1331,37 +1535,53 @@ entities:
       pos: 9.5,-0.5
       parent: 1
       type: Transform
-    - nextFire: 382.172022
+    - nextFire: 0
       type: Thruster
-  - uid: 199
-    components:
-    - rot: 1.5707963267948966 rad
-      pos: -2.5,4.5
-      parent: 1
-      type: Transform
-    - nextFire: 207.5914989
-      type: Thruster
-  - uid: 204
+  - uid: 144
     components:
     - rot: -1.5707963267948966 rad
-      pos: 12.5,4.5
+      pos: 12.5,5.5
       parent: 1
       type: Transform
-    - nextFire: 209.591757
+    - nextFire: 0
       type: Thruster
-  - uid: 209
+  - uid: 161
     components:
-    - pos: 0.5,10.5
+    - rot: 1.5707963267948966 rad
+      pos: -2.5,5.5
       parent: 1
       type: Transform
-    - nextFire: 189.2989363
+    - nextFire: 0
       type: Thruster
-  - uid: 215
+  - uid: 197
     components:
-    - pos: 9.5,10.5
+    - pos: 8.5,10.5
       parent: 1
       type: Transform
-    - nextFire: 190.8141539
+    - nextFire: 0
+      type: Thruster
+  - uid: 200
+    components:
+    - rot: -1.5707963267948966 rad
+      pos: 12.5,2.5
+      parent: 1
+      type: Transform
+    - nextFire: 0
+      type: Thruster
+  - uid: 201
+    components:
+    - pos: 1.5,10.5
+      parent: 1
+      type: Transform
+    - nextFire: 0
+      type: Thruster
+  - uid: 206
+    components:
+    - rot: 1.5707963267948966 rad
+      pos: -2.5,2.5
+      parent: 1
+      type: Transform
+    - nextFire: 0
       type: Thruster
 - proto: ToolboxSyndicateFilled
   entities:
@@ -1370,15 +1590,90 @@ entities:
     - pos: 5.5,6.5
       parent: 1
       type: Transform
-    - nextAttack: 200.4782218
+    - nextAttack: 0
       type: MeleeWeapon
-    - nextSound: 200.6782218
+    - nextSound: 0
       type: EmitSoundOnCollide
+- proto: TurretLoaderShipEvent
+  entities:
+  - uid: 245
+    components:
+    - pos: 2.5,1.5
+      parent: 1
+      type: Transform
+    - linkedPorts:
+        192:
+        - TurretLoaderSender: CannonConsoleReceiver
+      registeredSinks:
+        TurretLoaderSender:
+        - 192
+      type: DeviceLinkSource
+  - uid: 246
+    components:
+    - pos: 1.5,1.5
+      parent: 1
+      type: Transform
+    - linkedPorts:
+        172:
+        - TurretLoaderSender: CannonConsoleReceiver
+      registeredSinks:
+        TurretLoaderSender:
+        - 172
+      type: DeviceLinkSource
+  - uid: 247
+    components:
+    - pos: 0.5,1.5
+      parent: 1
+      type: Transform
+    - linkedPorts:
+        159:
+        - TurretLoaderSender: CannonConsoleReceiver
+      registeredSinks:
+        TurretLoaderSender:
+        - 159
+      type: DeviceLinkSource
+  - uid: 248
+    components:
+    - pos: 7.5,1.5
+      parent: 1
+      type: Transform
+    - linkedPorts:
+        194:
+        - TurretLoaderSender: CannonConsoleReceiver
+      registeredSinks:
+        TurretLoaderSender:
+        - 194
+      type: DeviceLinkSource
+  - uid: 249
+    components:
+    - pos: 8.5,1.5
+      parent: 1
+      type: Transform
+    - linkedPorts:
+        171:
+        - TurretLoaderSender: CannonConsoleReceiver
+      registeredSinks:
+        TurretLoaderSender:
+        - 171
+      type: DeviceLinkSource
+  - uid: 250
+    components:
+    - pos: 9.5,1.5
+      parent: 1
+      type: Transform
+    - linkedPorts:
+        135:
+        - TurretLoaderSender: CannonConsoleReceiver
+      registeredSinks:
+        TurretLoaderSender:
+        - 135
+      type: DeviceLinkSource
 - proto: WallShuttle
   entities:
   - uid: 2
     components:
-    - pos: -2.5,1.5
+    - rot: 1.5707963267948966 rad
+      pos: -2.5,4.5
       parent: 1
       type: Transform
   - uid: 3
@@ -1605,74 +1900,27 @@ entities:
     - pos: -2.5,3.5
       parent: 1
       type: Transform
-  - uid: 141
-    components:
-    - pos: 12.5,5.5
-      parent: 1
-      type: Transform
-  - uid: 142
-    components:
-    - pos: 11.5,6.5
-      parent: 1
-      type: Transform
-  - uid: 143
-    components:
-    - pos: 4.5,12.5
-      parent: 1
-      type: Transform
-  - uid: 144
-    components:
-    - pos: 5.5,12.5
-      parent: 1
-      type: Transform
-  - uid: 145
-    components:
-    - pos: -1.5,6.5
-      parent: 1
-      type: Transform
-  - uid: 146
-    components:
-    - pos: -2.5,5.5
-      parent: 1
-      type: Transform
   - uid: 157
     components:
     - pos: 12.5,3.5
       parent: 1
       type: Transform
-  - uid: 170
-    components:
-    - pos: 12.5,1.5
-      parent: 1
-      type: Transform
   - uid: 193
     components:
-    - pos: 9.5,9.5
+    - rot: -1.5707963267948966 rad
+      pos: 4.5,12.5
       parent: 1
       type: Transform
   - uid: 195
     components:
-    - pos: 8.5,10.5
+    - rot: -1.5707963267948966 rad
+      pos: 5.5,12.5
       parent: 1
       type: Transform
   - uid: 196
     components:
-    - pos: 0.5,9.5
-      parent: 1
-      type: Transform
-  - uid: 197
-    components:
-    - pos: 1.5,10.5
-      parent: 1
-      type: Transform
-  - uid: 205
-    components:
-    - pos: 12.5,2.5
-      parent: 1
-      type: Transform
-  - uid: 206
-    components:
-    - pos: -2.5,2.5
+    - rot: 1.5707963267948966 rad
+      pos: 12.5,4.5
       parent: 1
       type: Transform
 - proto: WallShuttleDiagonal
@@ -1733,16 +1981,27 @@ entities:
       pos: 6.5,-0.5
       parent: 1
       type: Transform
-  - uid: 200
+  - uid: 132
     components:
-    - rot: 3.141592653589793 rad
-      pos: 1.5,9.5
+    - rot: -1.5707963267948966 rad
+      pos: 9.5,10.5
       parent: 1
       type: Transform
-  - uid: 201
+  - uid: 148
+    components:
+    - pos: 0.5,10.5
+      parent: 1
+      type: Transform
+  - uid: 170
+    components:
+    - rot: 3.141592653589793 rad
+      pos: 12.5,1.5
+      parent: 1
+      type: Transform
+  - uid: 204
     components:
     - rot: 1.5707963267948966 rad
-      pos: 8.5,9.5
+      pos: -2.5,1.5
       parent: 1
       type: Transform
   - uid: 207
