--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/ballistic.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/ballistic.yml
@@ -1,4 +1,4 @@
-#All ballistic cannons - .30, 37mm, 100mm
+#All ballistic cannons - 7.62mm (.30), 37mm, 100mm
 #todo: draw some sick sprites for 37 & 100mm cannons, since they look like generic machine gun turret rn
 
 #base
@@ -40,7 +40,7 @@
       ports:
         - CannonConsoleReceiver
 
-#.30
+#7.62
 - type: entity
   id: ShipEventMachineGunCannon
   parent: ShipEventCannonBallisticBase
@@ -48,6 +48,7 @@
     - type: Cannon
       ammoPrototypes:
         - "CartridgeLightRifle"
+        - "CartridgeLightRifleCaseless"
     - type: Sprite
       layers:
         - state: syndie_lethal
@@ -68,10 +69,10 @@
                   min: 3
                   max: 5
     - type: Gun
-      minAngle: 4
-      maxAngle: 20
-      angleIncrease: 4
-      angleDecay: 16
+      minAngle: 2
+      maxAngle: 10
+      angleIncrease: 2
+      angleDecay: 1
       fireRate: 3
       projectileSpeed: 100
       selectedMode: FullAuto
@@ -109,10 +110,10 @@
                   min: 3
                   max: 5
     - type: Gun
-      minAngle: 4
-      maxAngle: 20
-      angleIncrease: 4
-      angleDecay: 16
+      minAngle: 0
+      maxAngle: 10
+      angleIncrease: 2
+      angleDecay: 1
       fireRate: 2
       projectileSpeed: 100
       selectedMode: FullAuto
@@ -120,7 +121,7 @@
         - FullAuto
       soundGunshot: 
         path: /Audio/Theta/Shipevent/artillery.ogg
-        volume: 20
+        volume: 10
       
 #100mm
 - type: entity
@@ -150,16 +151,16 @@
                   min: 3
                   max: 5
     - type: Gun
-      minAngle: 1
-      maxAngle: 10
-      angleIncrease: 1
-      angleDecay: 1
-      fireRate: 0.7
-      projectileSpeed: 50
+      minAngle: 0
+      maxAngle: 0
+      angleIncrease: 0
+      angleDecay: 0
+      fireRate: 0.5
+      projectileSpeed: 30
       selectedMode: FullAuto
       availableModes:
         - FullAuto
       soundGunshot:
         path: /Audio/Theta/Shipevent/artillery.ogg
         params:
-          volume: 25
+          volume: 20
