--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/ammo-ballistic.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/ammo-ballistic.yml
@@ -4,7 +4,7 @@
   parent: CartridgeLightRifle
   components:
   - type: CartridgeAmmo
-    proto: BulleLightRifle
+    proto: BulletLightRifle
     deleteOnSpawn: true
 
 #37mm round
