--- a/Resources/Maps/Theta/Shipevent/Ships/shipevent-boxship.yml
+++ b/Resources/Maps/Theta/Shipevent/Ships/shipevent-boxship.yml
@@ -10,7 +10,7 @@ entities:
   - uid: 1
     components:
     - type: MetaData
-    - pos: -0.8437195,0.62506104
+    - pos: 29.15628,30.625061
       parent: invalid
       type: Transform
     - chunks:
@@ -89,7 +89,7 @@ entities:
     - type: RadiationGridResistance
 - proto: AirlockExternal
   entities:
-  - uid: 36
+  - uid: 2
     components:
     - rot: 1.5707963267948966 rad
       pos: 1.5,-1.5
@@ -97,14 +97,14 @@ entities:
       type: Transform
 - proto: APCHyperCapacity
   entities:
-  - uid: 72
+  - uid: 3
     components:
     - pos: -0.5,1.5
       parent: 1
       type: Transform
 - proto: AtmosDeviceFanTiny
   entities:
-  - uid: 37
+  - uid: 4
     components:
     - rot: 1.5707963267948966 rad
       pos: 1.5,-1.5
@@ -112,7 +112,7 @@ entities:
       type: Transform
 - proto: CableApcExtension
   entities:
-  - uid: 39
+  - uid: 5
     components:
     - pos: 1.5,-0.5
       parent: 1
@@ -121,7 +121,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 75
+  - uid: 6
     components:
     - pos: -0.5,1.5
       parent: 1
@@ -130,7 +130,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 76
+  - uid: 7
     components:
     - pos: 0.5,1.5
       parent: 1
@@ -139,7 +139,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 77
+  - uid: 8
     components:
     - pos: 1.5,1.5
       parent: 1
@@ -148,7 +148,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 78
+  - uid: 9
     components:
     - pos: 1.5,2.5
       parent: 1
@@ -157,7 +157,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 79
+  - uid: 10
     components:
     - pos: 1.5,0.5
       parent: 1
@@ -166,7 +166,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 80
+  - uid: 11
     components:
     - pos: 2.5,1.5
       parent: 1
@@ -175,7 +175,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 83
+  - uid: 12
     components:
     - pos: 1.5,-1.5
       parent: 1
@@ -186,7 +186,7 @@ entities:
       type: Fixtures
 - proto: CableHV
   entities:
-  - uid: 46
+  - uid: 13
     components:
     - pos: 0.5,0.5
       parent: 1
@@ -195,7 +195,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 47
+  - uid: 14
     components:
     - pos: -0.5,0.5
       parent: 1
@@ -206,7 +206,7 @@ entities:
       type: Fixtures
 - proto: CableMV
   entities:
-  - uid: 48
+  - uid: 15
     components:
     - pos: -0.5,0.5
       parent: 1
@@ -215,7 +215,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 49
+  - uid: 16
     components:
     - pos: -1.5,0.5
       parent: 1
@@ -224,7 +224,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 50
+  - uid: 17
     components:
     - pos: -1.5,-0.5
       parent: 1
@@ -233,7 +233,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 51
+  - uid: 18
     components:
     - pos: -1.5,1.5
       parent: 1
@@ -242,7 +242,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 52
+  - uid: 19
     components:
     - pos: -1.5,2.5
       parent: 1
@@ -251,7 +251,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 53
+  - uid: 20
     components:
     - pos: -1.5,3.5
       parent: 1
@@ -260,7 +260,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 54
+  - uid: 21
     components:
     - pos: -0.5,3.5
       parent: 1
@@ -269,7 +269,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 55
+  - uid: 22
     components:
     - pos: -0.5,4.5
       parent: 1
@@ -278,7 +278,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 56
+  - uid: 23
     components:
     - pos: 0.5,4.5
       parent: 1
@@ -287,7 +287,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 57
+  - uid: 24
     components:
     - pos: 1.5,4.5
       parent: 1
@@ -296,7 +296,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 58
+  - uid: 25
     components:
     - pos: 2.5,4.5
       parent: 1
@@ -305,7 +305,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 59
+  - uid: 26
     components:
     - pos: 3.5,4.5
       parent: 1
@@ -314,7 +314,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 60
+  - uid: 27
     components:
     - pos: 3.5,3.5
       parent: 1
@@ -323,7 +323,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 61
+  - uid: 28
     components:
     - pos: 4.5,3.5
       parent: 1
@@ -332,7 +332,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 62
+  - uid: 29
     components:
     - pos: 4.5,2.5
       parent: 1
@@ -341,7 +341,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 63
+  - uid: 30
     components:
     - pos: 4.5,1.5
       parent: 1
@@ -350,7 +350,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 64
+  - uid: 31
     components:
     - pos: 4.5,0.5
       parent: 1
@@ -359,7 +359,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 65
+  - uid: 32
     components:
     - pos: 4.5,-0.5
       parent: 1
@@ -368,7 +368,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 66
+  - uid: 33
     components:
     - pos: 3.5,-0.5
       parent: 1
@@ -377,7 +377,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 67
+  - uid: 34
     components:
     - pos: 3.5,-1.5
       parent: 1
@@ -386,7 +386,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 68
+  - uid: 35
     components:
     - pos: 2.5,-1.5
       parent: 1
@@ -395,7 +395,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 69
+  - uid: 36
     components:
     - pos: 1.5,-1.5
       parent: 1
@@ -404,7 +404,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 70
+  - uid: 37
     components:
     - pos: 0.5,-1.5
       parent: 1
@@ -413,7 +413,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 71
+  - uid: 38
     components:
     - pos: -0.5,-1.5
       parent: 1
@@ -422,7 +422,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 73
+  - uid: 39
     components:
     - pos: -0.5,1.5
       parent: 1
@@ -431,7 +431,7 @@ entities:
       type: AmbientSound
     - fixtures: {}
       type: Fixtures
-  - uid: 74
+  - uid: 40
     components:
     - pos: -0.5,-0.5
       parent: 1
@@ -442,7 +442,7 @@ entities:
       type: Fixtures
 - proto: CannonComputerShipEvent
   entities:
-  - uid: 42
+  - uid: 41
     components:
     - pos: 2.5,2.5
       parent: 1
@@ -450,15 +450,15 @@ entities:
     - enabled: True
       type: PointLight
     - linkedPorts:
-        38:
+        52:
         - CannonConsoleSender: CannonConsoleReceiver
       registeredSinks:
         CannonConsoleSender:
-        - 38
+        - 52
       type: DeviceLinkSource
 - proto: ChairPilotSeat
   entities:
-  - uid: 84
+  - uid: 42
     components:
     - rot: 3.141592653589793 rad
       pos: 1.5,1.5
@@ -473,7 +473,7 @@ entities:
       type: Transform
 - proto: DrinkBeer
   entities:
-  - uid: 85
+  - uid: 44
     components:
     - pos: 0.5,1.5
       parent: 1
@@ -482,7 +482,7 @@ entities:
       type: MeleeWeapon
     - nextSound: 439.0639858
       type: EmitSoundOnCollide
-  - uid: 86
+  - uid: 45
     components:
     - pos: 0.5,1.5
       parent: 1
@@ -491,7 +491,7 @@ entities:
       type: MeleeWeapon
     - nextSound: 439.5736244
       type: EmitSoundOnCollide
-  - uid: 87
+  - uid: 46
     components:
     - pos: 0.5,1.5
       parent: 1
@@ -500,7 +500,7 @@ entities:
       type: MeleeWeapon
     - nextSound: 440.1119906
       type: EmitSoundOnCollide
-  - uid: 88
+  - uid: 47
     components:
     - pos: 0.5,1.5
       parent: 1
@@ -511,21 +511,30 @@ entities:
       type: EmitSoundOnCollide
 - proto: GeneratorRTG
   entities:
-  - uid: 13
+  - uid: 48
     components:
     - pos: 0.5,0.5
       parent: 1
       type: Transform
+- proto: Gyroscope
+  entities:
+  - uid: 66
+    components:
+    - pos: -0.5,2.5
+      parent: 1
+      type: Transform
+    - nextFire: 54.2019787
+      type: Thruster
 - proto: HeavyArtilleryAmmoClosetShipEvent
   entities:
-  - uid: 41
+  - uid: 49
     components:
     - pos: 2.5,1.5
       parent: 1
       type: Transform
 - proto: NetworkConfigurator
   entities:
-  - uid: 90
+  - uid: 50
     components:
     - pos: 0.5,1.5
       parent: 1
@@ -536,7 +545,7 @@ entities:
       type: EmitSoundOnCollide
 - proto: PoweredlightLED
   entities:
-  - uid: 82
+  - uid: 51
     components:
     - rot: -1.5707963267948966 rad
       pos: 2.5,1.5
@@ -546,7 +555,7 @@ entities:
       type: AmbientSound
 - proto: ShipEventHeavyArtilleryCannon
   entities:
-  - uid: 38
+  - uid: 52
     components:
     - flags: SessionSpecific
       type: MetaData
@@ -555,102 +564,85 @@ entities:
       parent: 1
       type: Transform
     - fireRate: 1
-      nextFire: 0
       type: Gun
     - links:
-      - 42
-      - 40
+      - 41
+      - 65
       type: DeviceLinkSink
     - container: ""
       type: ContainerAmmoProvider
 - proto: SubstationBasic
   entities:
-  - uid: 44
+  - uid: 53
     components:
     - pos: -0.5,0.5
       parent: 1
       type: Transform
 - proto: Table
   entities:
-  - uid: 45
+  - uid: 54
     components:
     - pos: 0.5,1.5
       parent: 1
       type: Transform
 - proto: TeamSpawnerShipEvent
   entities:
-  - uid: 81
+  - uid: 55
     components:
     - pos: 1.5,2.5
       parent: 1
       type: Transform
 - proto: Thruster
   entities:
-  - uid: 26
+  - uid: 56
     components:
     - rot: 1.5707963267948966 rad
       pos: -1.5,3.5
       parent: 1
       type: Transform
-    - nextFire: 0
-      type: Thruster
-  - uid: 27
+  - uid: 57
     components:
     - rot: 1.5707963267948966 rad
       pos: -1.5,-0.5
       parent: 1
       type: Transform
-    - nextFire: 0
-      type: Thruster
-  - uid: 28
+  - uid: 58
     components:
     - rot: 3.141592653589793 rad
       pos: -0.5,-1.5
       parent: 1
       type: Transform
-    - nextFire: 0
-      type: Thruster
-  - uid: 29
+  - uid: 59
     components:
     - pos: -0.5,4.5
       parent: 1
       type: Transform
-    - nextFire: 0
-      type: Thruster
-  - uid: 32
+  - uid: 60
     components:
     - pos: 3.5,4.5
       parent: 1
       type: Transform
-    - nextFire: 0
-      type: Thruster
-  - uid: 33
+  - uid: 61
     components:
     - rot: -1.5707963267948966 rad
       pos: 4.5,3.5
       parent: 1
       type: Transform
-    - nextFire: 0
-      type: Thruster
-  - uid: 34
+  - uid: 62
     components:
     - rot: -1.5707963267948966 rad
       pos: 4.5,-0.5
       parent: 1
       type: Transform
-    - nextFire: 0
-      type: Thruster
-  - uid: 35
+  - uid: 63
     components:
     - rot: 3.141592653589793 rad
       pos: 3.5,-1.5
       parent: 1
       type: Transform
-    - nextFire: 0
-      type: Thruster
 - proto: ToolboxSyndicateFilled
   entities:
-  - uid: 89
+  - uid: 64
     components:
     - pos: 0.5,1.5
       parent: 1
@@ -661,141 +653,136 @@ entities:
       type: EmitSoundOnCollide
 - proto: TurretLoaderShipEvent
   entities:
-  - uid: 40
+  - uid: 65
     components:
     - pos: 2.5,0.5
       parent: 1
       type: Transform
     - linkedPorts:
-        38:
+        52:
         - TurretLoaderSender: CannonConsoleReceiver
       registeredSinks:
         TurretLoaderSender:
-        - 38
+        - 52
       type: DeviceLinkSource
 - proto: WallReinforced
   entities:
-  - uid: 2
-    components:
-    - pos: -0.5,2.5
-      parent: 1
-      type: Transform
-  - uid: 3
+  - uid: 67
     components:
     - pos: -0.5,3.5
       parent: 1
       type: Transform
-  - uid: 4
+  - uid: 68
     components:
     - pos: 0.5,3.5
       parent: 1
       type: Transform
-  - uid: 5
+  - uid: 69
     components:
     - pos: 2.5,3.5
       parent: 1
       type: Transform
-  - uid: 6
+  - uid: 70
     components:
     - pos: 3.5,3.5
       parent: 1
       type: Transform
-  - uid: 7
+  - uid: 71
     components:
     - pos: 3.5,2.5
       parent: 1
       type: Transform
-  - uid: 8
+  - uid: 72
     components:
     - pos: 3.5,0.5
       parent: 1
       type: Transform
-  - uid: 9
+  - uid: 73
     components:
     - pos: 3.5,-0.5
       parent: 1
       type: Transform
-  - uid: 10
+  - uid: 74
     components:
     - pos: 2.5,-0.5
       parent: 1
       type: Transform
-  - uid: 11
+  - uid: 75
     components:
     - pos: 0.5,-0.5
       parent: 1
       type: Transform
-  - uid: 12
+  - uid: 76
     components:
     - pos: -0.5,-0.5
       parent: 1
       type: Transform
-  - uid: 14
+  - uid: 77
     components:
     - pos: -0.5,1.5
       parent: 1
       type: Transform
-  - uid: 15
+  - uid: 78
     components:
     - pos: 3.5,1.5
       parent: 1
       type: Transform
-  - uid: 16
+  - uid: 79
     components:
     - pos: 0.5,4.5
       parent: 1
       type: Transform
-  - uid: 17
+  - uid: 80
     components:
     - pos: 1.5,4.5
       parent: 1
       type: Transform
-  - uid: 18
+  - uid: 81
     components:
     - pos: 2.5,4.5
       parent: 1
       type: Transform
-  - uid: 19
+  - uid: 82
     components:
     - pos: 1.5,3.5
       parent: 1
       type: Transform
-  - uid: 20
+  - uid: 83
     components:
     - pos: -1.5,2.5
       parent: 1
       type: Transform
-  - uid: 21
+  - uid: 84
     components:
     - pos: -1.5,1.5
       parent: 1
       type: Transform
-  - uid: 22
+  - uid: 85
     components:
     - pos: -1.5,0.5
       parent: 1
       type: Transform
-  - uid: 23
+  - uid: 86
     components:
     - pos: 4.5,2.5
       parent: 1
       type: Transform
-  - uid: 24
+  - uid: 87
     components:
     - pos: 4.5,1.5
       parent: 1
       type: Transform
-  - uid: 25
+  - uid: 88
     components:
     - pos: 4.5,0.5
       parent: 1
       type: Transform
-  - uid: 30
+  - uid: 89
     components:
     - pos: 0.5,-1.5
       parent: 1
       type: Transform
-  - uid: 31
+  - uid: 90
     components:
     - pos: 2.5,-1.5
       parent: 1
