Более красивый оверлей при выходе за границы поля (#205)
* 0

* Delete border.png

* Update Resources/Prototypes/Shaders/shaders.yml

Co-authored-by: KIBORG04 <bossmira4@gmail.com>

* rename

* removed reference to border tex

---------

Co-authored-by: KIBORG04 <bossmira4@gmail.com>

--- a/Resources/Prototypes/Shaders/shaders.yml
+++ b/Resources/Prototypes/Shaders/shaders.yml
@@ -71,8 +71,7 @@
   id: Stealth
   kind: source
   path: "/Textures/Shaders/stealth.swsl"
-
 - type: shader
-  id: MonoColor
+  id: BoundsOverlay
   kind: source
-  path: "/Textures/Theta/ShipEvent/Shaders/mono_color.swsl"
+  path: "/Textures/Theta/ShipEvent/Shaders/bounds_overlay.swsl"
